--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   },
   "devDependencies": {
     "node-sass": "^4.14.1",
+    "react-responsive": "^8.1.0",
     "react-scroll": "^1.8.1",
     "reset-css": "^5.0.1"
   }
